[package]
name = "qval-wasm"
version = "0.1.0"
edition = "2021"
author = "fescii"
license = "MIT"
repository = "https://github.com/fescii/qval-wasm"
"description" =  "Wasm package for the qval project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
getrandom = { version = "0.2", features = ["js"] }

